@@ -113,6 +113,7 @@ Usage : abcmatch <abc file> [-options]
         -con  pitch contour match
         -fixed <n> fixed number of notes
         -qnt quantized pitch contour
+        -lev use levenshtein distance
         -a report any matching bars (default all bars)
         -ign ignore simple bars
         -br %d only report number of matched bars when
@@ -122,7 +123,9 @@ Usage : abcmatch <abc file> [-options]
         -pitch_hist pitch histogram
         -wpitch_hist interval weighted pitch histogram
         -length_hist pitch histogram
+        -interval_hist pitch interval histogram
         -pitch_table separate pitch pdfs for each tune
+        -interval_table separate interval pdfs for each tune
 
 
 When running this program, you must provide the name of the abc file name
@@ -266,6 +269,30 @@ The program quantizes a quarter note into 24 units. Thus eighth notes
 have a value of 12, dotted half notes 72, etc. The program does
 not require the match.abc file to be present if you are computing
 the histograms since it does not perform any matching.
+
+
+abcmatch.exe scotjig.abc -interval_hist
+
+computes the histogram of the pitch interval in midi units
+between adjacent notes. The histogram is restricted between
+intervals -12 and 12 units.
+
+eg.
+interval_histogram
+-5 2
+-4 3
+-3 10
+-2 17
+-1 3
+0 8
+1 3
+2 23
+3 11
+4 1
+5 4
+
+For a collection of tunes in a file, you can use -pitch_table
+or -interval_table to create a database for future analysis.
 
 
 Limits of the program
