@@ -4,7 +4,7 @@ midi2abc version 2.93 Sept 10 2013
 abc2midi version 3.10 June 07 2013
 abc2abc  version 1.74 April 21 2013
 yaps     version 1.54 April 21 2013
-abcmatch version 1.56 June 09 2013
+abcmatch version 1.58 October 22 2013
 midicopy version 1.18 October 01 2013
 
 24th January 2002
